--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "start": "node dist/3.longestSubstring.js"
+  },
   "devDependencies": {
-    "@types/node": "^17.0.23"
+    "@types/node": "^17.0.23",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
